# ai-project

ThreeMusketeers /: expecti_max_agent.py  mini_max_agent.py  three_musketeers.ipynb
car-continuous/: car_model.py  continuous_mountain_car.ipynb  continuous_mountain_car_env_extended.py  mountain_car_agent.pkl  mountain_car_agent.py  mountain_car_stochastic_agent.pkl  pyproject.toml  stochastic_mountain_car_agent.py
car-continuous/results_sweeps/: bayesian-sweep-epsilon-decay-v2.csv  bayesian-sweep-epsilon-decay.csv  bayesian-sweep-stochastic-q-learning-alpha-decay-v2.csv  bayesian-sweep-stochastic-q-learning-alpha-decay.csv
three-musketeers/: .gitignore  expecti_max_agent.py  mini_max_agent.py  pyproject.toml  three_musketeers.ipynb
three-musketeers/results_sweeps/: expectimax-sweep.csv  minimax-sweep.csv
