[tool.poetry]
name = "ai-project"
version = "0.1.0"
description = ""
authors = ["Mateo Giraz <mateogiraz27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
tqdm = "^4.67.0"
numpy = "^2.1.3"
wandb = "^0.18.7"
gym = "^0.26.2"
gymnasium = "^1.0.0"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
